# minesweeper

./: .gitignore  README.md  interface.glade~  interface.ui  interface.ui~  interface_style.css  meson.build  todo.txt
.cache/clangd/index/: game.cpp.B1CE420A731C17FA.idx  game.hpp.510048DA78C43FC6.idx  interface.cpp.E2814A7CD37987CD.idx  interface.hpp.7E397E58DC8F0BA0.idx  main.cpp.563CCD4661DAEB88.idx
assets/: interface.ui
include/: game.hpp  global.hpp  interface.hpp
src/: game.cpp  interface.cpp  main.cpp
